# personal-site

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  index.html  init-letsencrypt.sh  jest.config.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  style.css
.claude/: CLAUDE.md  settings.json
.claude/agents/: document-maintainer.md  documentation-janitor.md  secure-code-reviewer.md  ui-component-builder.md  ui-designer.md
.github/workflows/: deploy.yml
app/: __init__.py  models.py  templating.py
app/routes/: blackjack.py  blog.py  generative.py  goals.py  main.py  news.py  pca_lasso.py  pr_review.py  resume.py  spotify.py  sudoku.py  synth.py  weather.py
app/routes/tools/: __init__.py  spotify.py
app/services/: __init__.py  cache.py  oauth.py  rate_limit.py  spotify_helpers.py
app/static/css/: blackjack.css  generative.css  goals.css  resume.css  spotify-cyberpunk.css  spotify.css  style.css  sudoku.css  synth.css  tools.css  weather.css  win98.css
app/templates/: 404.html  500.html  about.html  base.html  home.html  projects.html  win98_base.html  win98_window.html
docs/: ARCHITECTURE.md  EC2_MIGRATION.md
docs/ai/: project-context.md
docs/plans/: 2026-01-17-win98-ui-redesign.md
e2e/: conftest.py  test_pages.py
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
nginx/: default.conf.template
tests/: conftest.py  test_cache.py  test_oauth.py  test_rate_limit.py  test_routes.py  test_spotify_helpers.py  test_templating.py
(+39 files in other folders)
